--- a/aplicant-list.html
+++ b/aplicant-list.html
@@ -516,42 +516,53 @@
                             data-bs-toggle="modal"
                             data-bs-target="#exampleModal2"
                           >
-                            06-06-2023
+                            16-06-2023
                           </a>
                         </td>
                         <td class="">
                           <a
                             href="job.html"
                             class="text-decoration-none text-info"
-                            >12345</a
+                            >34582</a
                           >
                         </td>
-                        <td class="">23456</td>
-                        <td class="text-info text-nowrap">
-                          Abdul Hatem<i class="bi bi-patch-check ms-1"></i
-                          ><i class="bi bi-star-fill ms-1 text-warning"></i>
-                        </td>
+                        <td class="">225878</td>
+                        <td class="text-info text-nowrap">Farhia Afrin Ema</td>
                         <td>
-                          <span class="green-border">23456</span>
+                          <span class="green-border">62851</span>
                         </td>
-                        <td>23</td>
+                        <td>35</td>
 
-                        <td class="text-nowrap">Khalid Rahman</td>
+                        <td class="text-nowrap">Fahmida...</td>
 
                         <td class="text-nowrap">
                           <button class="btn btn-ndark py-1 px-2">Take</button>
-                          <button class="btn btn-pink py-1 px-2">
+                          <button class="btn btn-pink py-1 px-2 mx-2">
                             Shortlist
                           </button>
 
-                          <button class="btn btn-primary py-1 px-2">
+                          <button
+                            class="btn btn-primary py-1 px-2 me-2"
+                            data-bs-toggle="modal"
+                            data-bs-target="#exampleModal5"
+                          >
                             Note
                           </button>
-                          <button class="btn btn-info py-1 px-2">
+                          <button
+                            class="btn btn-info py-1 px-2 me-2"
+                            data-bs-toggle="modal"
+                            data-bs-target="#exampleModal6"
+                          >
                             Create A Note
                           </button>
 
-                          <button class="btn btn-warning py-1 px-2">Log</button>
+                          <button
+                            class="btn btn-warning py-1 px-2"
+                            data-bs-toggle="modal"
+                            data-bs-target="#exampleModal7"
+                          >
+                            Log
+                          </button>
                         </td>
                       </tr>
                       <tr class="" style="vertical-align: middle">
@@ -584,7 +595,8 @@
                         </td>
                         <td class="">23456</td>
                         <td class="text-info text-nowrap">
-                          Abdul Hatem<i class="bi bi-patch-check ms-1"></i>
+                          Abdul Hatem<i class="bi bi-patch-check ms-1"></i
+                          ><i class="bi bi-star-fill ms-1 text-warning"></i>
                         </td>
                         <td>
                           <span class="">23456</span>
@@ -595,14 +607,14 @@
 
                         <td class="text-nowrap">
                           <button class="btn btn-ndark py-1 px-2">Take</button>
-                          <button class="btn btn-pink py-1 px-2">
+                          <button class="btn btn-pink py-1 px-2 mx-2">
                             Shortlist
                           </button>
 
-                          <button class="btn btn-primary py-1 px-2">
+                          <button class="btn btn-primary py-1 px-2 me-2">
                             Note
                           </button>
-                          <button class="btn btn-info py-1 px-2">
+                          <button class="btn btn-info py-1 px-2 me-2">
                             Create A Note
                           </button>
 
@@ -652,8 +664,8 @@
                           <button class="btn btn-outline-ndark py-1 px-2">
                             Taken
                           </button>
-                          <button class="btn btn-pink py-1 px-2">
-                            Shortlist
+                          <button class="btn btn-outline-pink py-1 px-2">
+                            Shortlisted
                           </button>
 
                           <button class="btn btn-primary py-1 px-2">
@@ -707,7 +719,7 @@
 
                         <td class="text-nowrap">
                           <button class="btn btn-ndark py-1 px-2">Take</button>
-                          <button class="btn btn-outline-pink py-1 px-2">
+                          <button class="btn btn-outline-pink py-1 px-2 mx-1">
                             Shortlisted
                           </button>
 
@@ -786,6 +798,293 @@
                     <button type="button" class="btn btn-primary">
                       Save change
                     </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Note model -->
+            <div
+              class="modal fade"
+              id="exampleModal5"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel5"
+              aria-hidden="true"
+            >
+              <div
+                class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
+              >
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel5">
+                      Note Details
+                    </h5>
+                  </div>
+                  <div class="modal-body">
+                    <div>
+                      <div
+                        class="p-3 bg-light rounded-3 border border-1 border-dark mb-3"
+                      >
+                        <div
+                          class="d-flex justify-content-between align-items-center"
+                        >
+                          <div>
+                            <p class="mb-0 text-dark fs-5">Fahmida Tayba</p>
+                            <p class="text-info" style="font-size: 12px">
+                              ID-34582
+                            </p>
+                          </div>
+                          <div><p>July 14, 2023</p></div>
+                        </div>
+                        <div>
+                          <p class="" style="font-size: 16px; color: #3b3c3d">
+                            Note Title
+                          </p>
+                          <p>
+                            doloremque dolorem dolor, delectus repellendus
+                            expedita modi distinctio voluptate voluptas impedit.
+                            Corrupti est expedita non qui accusamus illum quam,
+                            cum cumque saepe excepturi rem.
+                          </p>
+                        </div>
+                        <div
+                          class="d-flex justify-content-between align-items-center"
+                        >
+                          <div>
+                            <p style="font-size: 16px; color: #3b3c3d">
+                              Read More
+                            </p>
+                          </div>
+                          <div>
+                            <button class="btn btn-primary py-1">Edit</button>
+                          </div>
+                        </div>
+                      </div>
+                      <div
+                        class="p-3 bg-light rounded-3 border border-1 border-dark mb-3"
+                      >
+                        <div
+                          class="d-flex justify-content-between align-items-center"
+                        >
+                          <div>
+                            <p class="mb-0 text-danger fs-5">Sajid HDY</p>
+                            <p class="text-info" style="font-size: 12px">
+                              ID-31934
+                            </p>
+                          </div>
+                          <div><p>June 29, 2023</p></div>
+                        </div>
+                        <div>
+                          <p class="text-gay-900" style="font-size: 16px">
+                            Note Title
+                          </p>
+                          <p>
+                            doloremque dolorem dolor, delectus repellendus
+                            expedita modi distinctio voluptate voluptas impedit.
+                            Corrupti est expedita non qui accusamus illum quam,
+                            cum cumque saepe excepturi rem.
+                          </p>
+                        </div>
+                        <div
+                          class="d-flex justify-content-between align-items-center"
+                        >
+                          <div>
+                            <p>Read More</p>
+                          </div>
+                          <div>
+                            <button class="btn btn-primary py-1">Edit</button>
+                          </div>
+                        </div>
+                      </div>
+                      <div
+                        class="p-3 bg-light rounded-3 border border-1 border-dark mb-3"
+                      >
+                        <div
+                          class="d-flex justify-content-between align-items-center"
+                        >
+                          <div>
+                            <p class="mb-0 text-dark fs-5">Fahmida Tayba</p>
+                            <p class="text-info" style="font-size: 12px">
+                              ID-34582
+                            </p>
+                          </div>
+                          <div><p>July 14, 2023</p></div>
+                        </div>
+                        <div>
+                          <p class="" style="font-size: 16px; color: #3b3c3d">
+                            Note Title
+                          </p>
+                          <p>
+                            doloremque dolorem dolor, delectus repellendus
+                            expedita modi distinctio voluptate voluptas impedit.
+                            Corrupti est expedita non qui accusamus illum quam,
+                            cum cumque saepe excepturi rem.
+                          </p>
+                        </div>
+                        <div
+                          class="d-flex justify-content-between align-items-center"
+                        >
+                          <div>
+                            <p>Read More</p>
+                          </div>
+                          <div>
+                            <button class="btn btn-warning py-1">Edited</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <div class="py-2"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Create Note model -->
+            <div
+              class="modal fade"
+              id="exampleModal6"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel6"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content p-3">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel6">
+                      Make A Note
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <form action="">
+                      <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label"
+                          >Note Title</label
+                        >
+                        <input
+                          type="text"
+                          class="form-control shadow-none rounded-3"
+                          id="exampleFormControlInput1"
+                          placeholder="Maximum 8 words can be given "
+                        />
+                      </div>
+                      <div>
+                        <label
+                          for="exampleFormControlTextarea1"
+                          class="form-label"
+                          >Note Details</label
+                        >
+                        <textarea
+                          class="form-control shadow-none rounded-3"
+                          id="exampleFormControlTextarea1"
+                          rows="3"
+                          placeholder="Maximum 30 words can be given"
+                        ></textarea>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-light shadow-lg"
+                      data-bs-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Log model -->
+            <div
+              class="modal fade"
+              id="exampleModal7"
+              tabindex="-1"
+              aria-labelledby="exampleModalLabel7"
+              aria-hidden="true"
+            >
+              <div
+                class="modal-dialog modal-dialog-centered"
+                style="max-width: 900px"
+              >
+                <div class="modal-content mx-4">
+                  <div class="modal-body p-0">
+                    <table class="table shadow-none">
+                      <thead
+                        class="text-white"
+                        style="background-color: #3378c2"
+                      >
+                        <tr class="">
+                          <th
+                            scope="col"
+                            class="border-end border-1"
+                            style="border-top-left-radius: 8px"
+                          >
+                            Name
+                          </th>
+                          <th
+                            scope="col"
+                            class="text-nowrap border-end border-1"
+                          >
+                            Em ID
+                          </th>
+                          <th scope="col" class="border-end border-1">Date</th>
+                          <th
+                            scope="col"
+                            class="text-nowrap"
+                            style="border-top-right-radius: 8px"
+                          >
+                            Note Before Edit
+                          </th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr class="" style="vertical-align: middle">
+                          <th
+                            scope="row"
+                            class="text-nowrap border-end border-1"
+                          >
+                            Fahmida Tayba
+                          </th>
+                          <td class="text-info border-end border-1">56123</td>
+                          <td class="text-nowrap border-end border-1">
+                            <p class="mb-0">14-07-2023</p>
+                            <p class="mb-0 text-muted">47: 15: 12 PM</p>
+                          </td>
+                          <td>
+                            <p class="border border-info p-2 rounded-3">
+                              Lorem ipsum dolor sit amet consectetur adipisicing
+                              elit. Reprehenderit molestias magnam doloribus
+                              impedit sunt ducimus inventore voluptas numquam
+                              eum ad corporis aperiam harum quo, explicabo
+                              officiis suscipit, reiciendis architecto veniam
+                              amet sequi, facere placeat illo veritatis.
+                              Dignissimos eius quibusdam tempora!
+                            </p>
+                          </td>
+                        </tr>
+                        <tr class="" style="vertical-align: middle">
+                          <th
+                            scope="row"
+                            class="text-nowrap border-end border-1"
+                          >
+                            Sajid HDY
+                          </th>
+                          <td class="text-info border-end border-1">56145</td>
+                          <td class="text-nowrap border-end border-1">
+                            <p class="mb-0">29-06-2023</p>
+                            <p class="mb-0 text-muted">47: 15: 12 PM</p>
+                          </td>
+                          <td>Seen Profile</td>
+                        </tr>
+                      </tbody>
+                    </table>
                   </div>
                 </div>
               </div>
