--- a/alltutors.html
+++ b/alltutors.html
@@ -402,7 +402,7 @@
                       <div class="d-flex gap-3">
                         <a
                           href="alltutors.html"
-                          class="btn btn-ndark text-center"
+                          class="btn btn-gdark text-center"
                           style="height: 52px"
                         >
                           <p style="margin-top: 7px">All Tutors</p>
@@ -425,7 +425,7 @@
                           <p class="p-0 m-0">SMS Send</p>
                           <p class="p-0 m-0">50</p>
                         </button>
-                        <button class="btn btn-ndark" style="height: 52px">
+                        <button class="btn btn-gdark" style="height: 52px">
                           Reset
                         </button>
                       </div>
@@ -433,7 +433,7 @@
                     <div
                       class="d-flex mt-5 justify-content-between align-items-center"
                     >
-                      <p>Search Result 5 Tutors</p>
+                      <p>Search Result 9 Tutors</p>
                       <button class="btn btn-primary">Mark All</button>
                     </div>
                   </div>
