--- a/search-tutor.html
+++ b/search-tutor.html
@@ -401,10 +401,10 @@
                     <div class="d-flex gap-3">
                       <a
                         href="alltutors.html"
-                        class="btn btn-ndark text-center"
+                        class="btn btn-gdark text-center"
                         style="height: 52px"
                       >
-                        <p  style="margin-top: 7px;">All Tutors</p>
+                        <p style="margin-top: 7px">All Tutors</p>
                       </a>
                       <button
                         class="btn btn-outline-primary py-1"
@@ -424,7 +424,7 @@
                         <p class="p-0 m-0">SMS Send</p>
                         <p class="p-0 m-0">50</p>
                       </button>
-                      <button class="btn btn-ndark" style="height: 52px">
+                      <button class="btn btn-gdark" style="height: 52px">
                         Reset
                       </button>
                     </div>
@@ -457,10 +457,10 @@
                     <div class="d-flex gap-3">
                       <a
                         href="alltutors.html"
-                        class="btn btn-ndark text-center"
+                        class="btn btn-gdark text-center"
                         style="height: 52px"
                       >
-                        <p class="" style="margin-top: 7px;">All Tutors</p>
+                        <p class="" style="margin-top: 7px">All Tutors</p>
                       </a>
                       <button
                         class="btn btn-outline-primary py-1"
@@ -480,7 +480,7 @@
                         <p class="p-0 m-0">SMS Send</p>
                         <p class="p-0 m-0">50</p>
                       </button>
-                      <button class="btn btn-ndark" style="height: 52px">
+                      <button class="btn btn-gdark" style="height: 52px">
                         Reset
                       </button>
                     </div>
@@ -503,7 +503,7 @@
                     <div
                       class="d-flex justify-content-between align-items-center"
                     >
-                      <p>Search Result 5 Tutors</p>
+                      <p>Search Result 6 Tutors</p>
                       <button class="btn btn-primary">Mark All</button>
                     </div>
                     <div>
