--- a/see-condition.html
+++ b/see-condition.html
@@ -420,12 +420,12 @@
                           <a
                             href="job.html"
                             class="text-decoration-none text-info"
-                            >12345</a
+                            >34582</a
                           >
                         </td>
                         <td>
                           <a href="#" class="text-decoration-none text-info"
-                            >Abdur Rahman</a
+                            >Kazi Afiya Riky</a
                           >
                         </td>
 
@@ -433,73 +433,12 @@
                           <a
                             class="p-1 rounded text-info text-decoration-none"
                             style="background-color: #e6eef7"
-                            >23457</a
+                            >A066599</a
                           >
                         </td>
-                        <td class="text-nowrap">Dhaka University</td>
+                        <td class="text-nowrap">European University</td>
                         <td class="text-wrap">Dashboard</td>
-                        <td class="text-nowrap">Fahmida Roy</td>
-                        <td class="text-info">403</td>
-                        <td class="text-nowrap">
-                          <p class="mb-0">14-06-2023</p>
-                          <p class="mb-0 text-muted">47: 15: 12 PM</p>
-                        </td>
-
-                        <td class="d-flex gap-1" style="padding: 30px 0px">
-                          <button
-                            class="btn btn-primary py-1 px-2"
-                            data-bs-toggle="modal"
-                            data-bs-target="#exampleModal1"
-                          >
-                            Note
-                          </button>
-                          <button
-                            class="btn btn-info py-1 px-2 text-nowrap"
-                            data-bs-toggle="modal"
-                            data-bs-target="#exampleModal2"
-                          >
-                            Create Note
-                          </button>
-                          <button
-                            class="btn btn-warning py-1 px-2"
-                            data-bs-toggle="modal"
-                            data-bs-target="#exampleModal3"
-                          >
-                            Log
-                          </button>
-                        </td>
-                      </tr>
-                      <tr class="" style="vertical-align: middle">
-                        <td
-                          scope="row "
-                          class="text-center text-nowrap"
-                          style="padding: 30px 18px"
-                        >
-                          01
-                        </td>
-                        <td>
-                          <a
-                            href="job.html"
-                            class="text-decoration-none text-info"
-                            >12345</a
-                          >
-                        </td>
-                        <td>
-                          <a href="#" class="text-decoration-none text-info"
-                            >Abdur Rahman</a
-                          >
-                        </td>
-
-                        <td class="text-info">
-                          <a
-                            class="p-1 rounded text-info text-decoration-none"
-                            style="background-color: #e6eef7"
-                            >23457</a
-                          >
-                        </td>
-                        <td class="text-nowrap">Dhaka University</td>
-                        <td class="text-wrap">Dashboard</td>
-                        <td class="text-nowrap">Fahmida Roy</td>
+                        <td class="text-nowrap">Fahmida Tayba</td>
                         <td class="text-info">403</td>
                         <td class="text-nowrap">
                           <p class="mb-0">14-06-2023</p>
@@ -565,10 +504,10 @@
                         <div>
                           <p class="mb-0 text-dark fs-5">Fahmida Tayba</p>
                           <p class="text-info" style="font-size: 12px">
-                            ID-23456
+                            ID-34582
                           </p>
                         </div>
-                        <div><p>June 17, 2023</p></div>
+                        <div><p>July 14, 2023</p></div>
                       </div>
                       <div>
                         <p class="" style="font-size: 16px; color: #3b3c3d">
@@ -603,10 +542,10 @@
                         <div>
                           <p class="mb-0 text-danger fs-5">Sajid HDY</p>
                           <p class="text-info" style="font-size: 12px">
-                            ID-23456
+                            ID-31934
                           </p>
                         </div>
-                        <div><p>June 17, 2023</p></div>
+                        <div><p>June 29, 2023</p></div>
                       </div>
                       <div>
                         <p class="text-gay-900" style="font-size: 16px">
@@ -639,10 +578,10 @@
                         <div>
                           <p class="mb-0 text-dark fs-5">Fahmida Tayba</p>
                           <p class="text-info" style="font-size: 12px">
-                            ID-23456
+                            ID-34582
                           </p>
                         </div>
-                        <div><p>June 17, 2023</p></div>
+                        <div><p>July 14, 2023</p></div>
                       </div>
                       <div>
                         <p class="" style="font-size: 16px; color: #3b3c3d">
@@ -780,7 +719,7 @@
                         </th>
                         <td class="text-info border-end border-1">56123</td>
                         <td class="text-nowrap border-end border-1">
-                          <p class="mb-0">14-06-2023</p>
+                          <p class="mb-0">14-07-2023</p>
                           <p class="mb-0 text-muted">47: 15: 12 PM</p>
                         </td>
                         <td>
